--- a/Magpie/.gitignore
+++ b/Magpie/.gitignore
@@ -1,2 +1,9 @@
 /Magpie2.class
 /MagpieRunner2.class
+/Magpie3.class
+/Magpie4.class
+/Magpie5.class
+/MagpieRunner3.class
+/MagpieRunner4.class
+/MagpieRunner5.class
+/StringExplorer.class
